<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/menu_train"
        android:layout_width="match_parent"
        android:layout_height="111dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/button_grey"
        android:onClick="train"
        android:text="@string/menu_train"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/menu_metrics"
        android:layout_width="match_parent"
        android:layout_height="111dp"
        android:backgroundTint="@color/button_grey"
        android:onClick="metrics"
        android:text="@string/menu_metrics"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:drawableStart="@android:drawable/ic_menu_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_train" />

    <Button
        android:id="@+id/menu_history"
        android:layout_width="match_parent"
        android:layout_height="111dp"
        android:backgroundTint="@color/button_grey"
        android:onClick="history"
        android:text="@string/menu_history"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:drawableStart="@android:drawable/ic_menu_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_metrics" />

    <Button
        android:id="@+id/menu_info"
        android:layout_width="match_parent"
        android:layout_height="111dp"
        android:backgroundTint="@color/button_grey"
        android:onClick="info"
        android:text="@string/menu_info"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:drawableStart="@android:drawable/ic_menu_info_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_history" />
</androidx.constraintlayout.widget.ConstraintLayout>